# LA-library

./: .gitignore  CMakeLists.txt  README.md  ine.sh  main.cpp  out.txt  readme.md
LAlibrary/: CMakeLists.txt  main.cpp
LAlibrary/includes/: errors.h  matrix.h  mt.h  mt_tbb.h  thr_queue.h  vector.h
LAlibrary/sources/: ex.cpp  main.cpp  matrix.cpp  matrix.h  mt.h  vector.cpp  vector.h
LAlibrary/test/: main.cpp  vectorTest.cpp
data/: gr.py
src/: matrix.h  matrixTest.cpp  mt.h  mt_tbb.h  mt_tbb_matrix.h  mt_tbb_vector.h  vector.h  vectorTest.cpp
test/: eigen_testing.cpp  eigen_testing.h  matrixTest.cpp  vectorTest.cpp
testing/: CMakeLists.txt  main.cpp
